read cors origin from .env, add integration & e2e tests for handlers and db
